--- a/index.html
+++ b/index.html
@@ -4,25 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<link rel="stylesheet" href="navigation.css"/>
 </head>
 <body>
-	<img src="Winner
-CineMAA Award	Best Actor - Male
-Gabbar Singh (2012)
+	<nav class="navigation">
+	<a href="register.html">Register</a>
+	<a href="login.html">login</a>
+	<a href="wikipidia.html">wikipidia</a>
+	<a href="pk biography.html">pk biography</a>
+	</nav>
 
-Filmfare Awards South
-2014	Nominee
-Filmfare Award - Telugu Film Industry	Best Actor
-Attarintiki Daredi (2013)
-2013	Winner
-Filmfare Award - Telugu Film Industry	Best Actor
-Gabbar Singh (2012)
-2009	Nominee
-Filmfare Award - Telugu Film Industry	Best Actor
-Jalsa (2008)
-2002	Nominee
-Filmfare Award - Telugu Film Industry	Best Actor
-Khushi (2001)
->
+
 </body>
 </html>
