--- a/link.html
+++ b/link.html
@@ -10,6 +10,7 @@
 		<p><input placeholder="enter name" type="text"></p>
 		<p><input placeholder="enter password" type="password"></p>
 		<p><input type="date" name=""></p>
+		<p><input type="emailid" name="text"></p>
 		<p>
 			<input type="radio" value="male" name="gender">male
 			<input type="radio" value="female" name="gender">female
@@ -18,6 +19,7 @@
 			<input value="mpc" type="checkbox">MPC
 			<input value="bcomca" type="checkbox">BCOMCA
 			<input value="cse" type="checkbox">CSE
+
 		</p>
 		<p>
 		<p><input type="file"></p>
