--- a/login.html
+++ b/login.html
@@ -4,8 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<link rel="stylesheet" href="navigation.css"/>
+	
 </head>
-<body><form action=""><p><input placeholder="enter emailid" type="id"/required></p>
+<body>
+	<nav class="navigation">
+	<a href="register.html">Register</a>
+	<a href="login.html">login</a>
+	<a href="wikipidia.html">wikipidia</a>
+	<a href="pk biography.html">pk biography</a>
+	</nav>
+	<form action=""><p><input placeholder="enter emailid" type="id"/required></p>
 	<p><input placeholder="enter password" type="password"/required></p>
 	<button>login</button>	
 
