--- a/wikipidia.html
+++ b/wikipidia.html
@@ -4,25 +4,31 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<script type="text/javascript">
-	</script>	
-
-
+	<link rel="stylesheet" href="navigation.css"/>
+	
 </head>
 <body>
-	<p><input placeholder="enter name" type="text"/required></p>
-	<p><input placeholder="enter password" type="password"/required></p>
-	<p><input placeholder="enter emailid" type="id"/required></p>
-	<p><input placeholder="enter mobile no" type="number"/required></p>
-	<p><input placeholder="enter DOB" type="number"/required></p>
-	<p><input placeholder="enter address"type="text"/required></p>
- 		<input type="radio" name="gender"/>male
-		<input type="radio" name="gender"/>female
-	</p>
-	
-	<p>
-	    <button>singup</button>	
-	    <input type="reset"/>
-	
+	<nav class="navigation">
+	<a href="register.html">Register</a>
+	<a href="login.html">login</a>
+	<a href="wikipidia.html">wikipidia</a>
+	<a href="pk biography.html">pk biography</a>
+	</nav>
+<p>Pawan Kalyan is an Indian actor, screenwriter, stunt coordinator, philanthropist and politician. His film works are predominantly in Telugu cinema. He is the youngest brother of popular actor Chiranjeevi. Pawan Kalyan made his acting debut in the 1996 Telugu film Akkada Ammayi Ikkada Abbayi. His next four films were all box-office successes namely Gokulamlo Seeta (1997), Suswagatham (1998), Tholi Prema (1998), and Thammudu (1999).[1] Kalyan's subsequent films Puri Jagannadh's Badri (2000) and S. J. Suryah's Kushi (2001) were box office successes.[2][3] He made his directorial debut with Johnny (2003), which was a box office failure.[4] He followed this with a string of failures: Gudumba Shankar (2004),[5] Balu (2005),[6] Bangaram (2006),[7] and Annavaram (2006).[8] After a gap, the film Jalsa directed by Trivikram Srinivas became a box office success.[9] He collaboarated with Suryah again for Puli (2010), which was a box office debacle.[10] Teen Maar (2010) and Panjaa (2011) released to mixed reviews.[11][12] The film Gabbar Singh (2012) released to positive reviews and was a blockbuster at the box office, marking his comeback after three back to back failures.[13] Kalyan's second film with Puri Jadganaddh was Cameraman Gangatho Rambabu (2012), which released to above average reviews.[14] Trivikram Srinivas's Attarintiki Daredi (2013) was an industry hit and got him back to no. 1, yet again.[15] His film Gopala Gopala (2015) with Venkatesh was a success while Sardaar Gabbar Singh,[16] Katamarayudu,[17] and Trivikram Srinivas's Agnyaathavaasi received negative reviews.[18][19] Vakeel Saab (2021), the masala-laced adaptation of the courtroom drama Pink (2016), received positive reviews.[20]
+
+
+Contents
+1	Filmography
+1.1	As actor
+1.2	As director, writer or producer
+1.3	As stunt coordinator
+1.4	As playback singer
+1.5	As choreographer/songs visualizer
+1.6	As narrator
+2	Notes
+3	See also
+4	References
+5	External links
+</p>
 </body>
 </html>
